// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`submitAnonymousVote emits error when not registered 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Du er ikke registert",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitAnonymousVote emits error when trying to vote with canVote false 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Du har ikke stemmerett",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitAnonymousVote emits error with insufficient permissions 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Brukeren har ikke riktig rettigheter",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitAnonymousVote emits vote 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "0",
        "alternative": "1",
        "question": "1",
        "user": "1",
      },
      "type": "ADD_VOTE",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "alternativeId": "1",
        "issueId": "1",
      },
      "type": "USER_VOTE",
    },
  ],
]
`;

exports[`submitRegularVote broadcasts vote 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "0",
        "alternative": "1",
        "question": "1",
        "user": "123",
      },
      "type": "ADD_VOTE",
    },
  ],
]
`;

exports[`submitRegularVote emits error when not registered 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Du er ikke registert",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitRegularVote emits error when trying to vote with canVote false 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Du har ikke stemmerett",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitRegularVote emits error with insufficient permissions 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "id": 0,
        "message": "Brukeren har ikke riktig rettigheter",
      },
      "type": "ERROR",
    },
  ],
]
`;

exports[`submitRegularVote emits vote 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "_id": "0",
        "alternative": "1",
        "question": "1",
        "user": "123",
      },
      "type": "ADD_VOTE",
    },
  ],
  Array [
    "action",
    Object {
      "data": Object {
        "alternativeId": "1",
        "issueId": "1",
      },
      "type": "USER_VOTE",
    },
  ],
]
`;
